# Canvas_manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_cron.py  test_habits.py
.claude/commands/: update-claude.md
.github/workflows/: test.yml
canvas_manager/: __init__.py  canvas_client.py  config.py  gcal_client.py  gemini_client.py  ical_parser.py  main.py  notifier.py  schedule.py  scheduler.py
canvas_manager_v3/: __init__.py  canvas_client.py  config.py  ical_parser.py  main.py  notifier.py
canvas_manager_v3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
canvas_manager_v4/: __init__.py  gcal_client.py  main.py  notifier.py
tests/: test_schedule.py  test_schedule_cli.py  test_scheduler.py
