[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-manager"
version = "0.1.0"
description = "Canvas + iCal deadlines → email and SMS reminders via Gmail API (no Twilio)"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "click",
    "python-dotenv",
    "icalendar",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "rich",
]

[project.scripts]
canvas-manager = "canvas_manager.main:cli"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
